--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,29 +8,65 @@
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <body>
-Productos
-Colecciones 
-Tienda
-Inicio 
 
-Logo
+   <!-- HEADER-->
+   <header class="header"> 
+    <nav class="header-container">
+      <div class="header__nav__logo">
+        <img src="./assets/images/logo.png" alt="Professional Logo" class="logo">
+      </div>
 
-Disfruta creando espacios
-BOTÓN Comprar ahora
+      <div class="header__nav__menu">
+        <input type="checkbox" id="check">
+            <label for="check" class="bar-button">
+                <i class="fas fa·bars"></i>
+            </label>
+            <ul class="list-nav">
+                <li class="item-nav"><a href="#">Productos</a></li>
+                <li class="item-nav"><a href="#">Colecciones </a></li>
+                <li class="item-nav"><a href="#">Tienda</a></li>
+                <li class="item-nav"><a href="#">Inicio </a></li>
+            </ul>
+      </div>
+    </nav>
+  </header>
 
-Volverse organizado se siente mejor con OPEN SPACES
+    <!-- MAIN -->
+  <main>
+    <section class="section1">
+      <h2 class="section1__title">Disfruta creando espacios</h2>
+      <div class="button">
+          <input class="button__buy" type="submit" value="Comprar ahora" />
+      </div>
+  </section>
 
-img
-Lo que necesitas 
-Una línea de productos diseñados para todos tus espacios
+  <section class="section2">
+    <div>
+        <h2>Volverse organizado se siente mejor con OPEN SPACES</h2>
+    </div>
 
-img
-Materia primas sustentables
-Una línea de productos diseñados para todos tus espacios
+    <div>
+    <img src="./assets/images/icon_1.png" alt="icon of a table with objects">
+    <h3>Lo que necesitas </h3>
+    <p>Una línea de productos diseñados para todos tus espacios</p>
+    </div>
 
-img
-Guía 
-Soporte y asesoramiento para ayudarte con yu objetivo
+    <div>
+    <img src="./assets/images/icon_2.png" alt="icon of a recycling bag">
+    <h3>Materia primas sustentables</h3>
+    <p>Una línea de productos diseñados para todos tus espacios</p>
+    </div>
+
+    <div>
+    <img src="./assets/images/icon_3.png" alt="">
+    <h3>Guía </h3>
+    <p>Soporte y asesoramiento para ayudarte con yu objetivo </p>
+    </div>
+      
+</section>
+
+
+
 
 img 
 Envío gratis garantizado 
@@ -40,26 +76,27 @@ Compra ahora
 Disfruta creando espacios
 Una lñinea de productos diseñados para todos tus espacios
 BOTÓN Comprar ahora
+  </main>
 
-Tienda
-Productos
-Cajoneras
-Para toda la casa 
-Habitaciones
+    <!-- FOOTER -->
+  <footer>
+  Tienda
+  Productos
+  Cajoneras
+  Para toda la casa 
+  Habitaciones
 
-Nosotros
-Nuestra guía 
-Nuestro diseño 
-Nuesta historia 
-Ayuda 
+  Nosotros
+  Nuestra guía 
+  Nuestro diseño 
+  Nuesta historia 
+  Ayuda 
 
-Contacto
-ayuda@openspaces.com 
-Socios
-ICONOS LONKEDIN INSTAGRAM TWITTER
+  Contacto
+  ayuda@openspaces.com 
+  Socios
+  ICONOS LONKEDIN INSTAGRAM TWITTER
+  </footer>
 
-
-
-  
 </body>
 </html>
