--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,300&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <script src="https://kit.fontawesome.com/07310f17cd.js" crossorigin="anonymous"></script>
   <title>modulo-1-evaluacion-final-romerogarcia</title>
-  <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <body>
 
