--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,300&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
   <script src="https://kit.fontawesome.com/07310f17cd.js" crossorigin="anonymous"></script>
   <title>modulo-1-evaluacion-final-romerogarcia</title>
 </head>
